senzr-infra/infra/helm/kong/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
spec:
  selector:
    app: kong
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
